Add batched time-series MQTT ingestion
